# Brep

./: .gitignore  CMakeLists.txt  README.MD
Brep/: Brep.cpp  Brep.h  CMakeLists.txt  main.cpp
Brep/inputFile/: data.json
Brep/lib/: freeglut.exp  freeglut_static.lib
Brep/src/: CMakeLists.txt
Brep/src/datastruct/: AllDataStruct.h  Edge.cpp  Edge.h  Face.cpp  Face.h  Halfedge.cpp  Halfedge.h  Loop.cpp  Loop.h  Solid.cpp  Solid.h  Vertex.cpp  Vertex.h
Brep/src/json/: json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
Brep/src/scene/: Scene.cpp  Scene.h
Brep/src/sweeper/: Sweeper.cpp  Sweeper.h
release/src/: scene_library.lib
